[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/main/ui/menu/splash-screen.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/VersionLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/xolonium-48-outline.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/main/puzzle/wood-backdrop.png" type="Texture" id=4]
[ext_resource path="res://src/main/ui/menu/SystemButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/ui/xolonium-48.tres" type="DynamicFont" id=7]




[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurboFat" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 3 )
text = "Turbo Fat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayHolder" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_right = -1024.0
margin_bottom = -100.0
rect_min_size = Vector2( 1024, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="PlayHolder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -40.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 193, 47 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="System" parent="." instance=ExtResource( 5 )]

[node name="VersionLabel" parent="." instance=ExtResource( 2 )]

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="PlayHolder/Play" to="." method="_on_Play_pressed"]
[connection signal="quit_pressed" from="System" to="." method="_on_System_quit_pressed"]
[connection signal="settings_pressed" from="System" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="quit_pressed" from="SettingsMenu" to="System" method="_on_Quit_pressed"]
